html structure added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- If multi-language site, reconsider usage of html lang declaration here. -->
-<html lang="en"> 
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -10,10 +10,10 @@
   <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
   <link rel="shortcut icon" href="favicon.ico" />
   <!--font-awesome link for icons-->
-  <link rel="stylesheet" media="screen" href="assets/vendor/font-awesome/css/all.min.css" >
+  <link rel="stylesheet" media="screen" href="assets/vendor/font-awesome/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
-  <link rel="stylesheet" media="screen" href="assets/css/style.css" >
+  <link rel="stylesheet" media="screen" href="assets/css/style.css">
 </head>
 
 <body>
@@ -21,18 +21,37 @@
   <div class="container">
     <!--header section start-->
     <header>
-      
+      <div class="wrapper">
+        <h1 class="home-heading">welcome to home page</h1>
+        <div class="hamburger">
+          <span class="bar bar1">bar</span>
+          <span class="bar bar2">bar</span>
+          <span class="bar bar3">bar</span>
+        </div>
+        <nav class="navbar">
+          <ul class="nav-list">
+            <li class="nav-item"><a href="" class="nav-link">home</a></li>
+            <li class="nav-item"><a href="" class="nav-link">about us </a></li>
+            <li class="nav-item"><a href="" class="nav-link">feature</a></li>
+            <li class="nav-item"><a href="" class="nav-link">feedback</a></li>
+            <li class="nav-item"><a href="" class="nav-link">contact us</a></li>
+          </ul>
+        </nav>
+        <button class="btn">logout</button>
+      </div>
     </header>
     <!--header section start-->
     <!--main section start-->
     <main>
-
+      <div class="wrapper">
+        <h2 class="sub-heading">home page content here</h2>
+      </div>
     </main>
     <!--main section end-->
 
     <!--footer section start-->
-    <footer>      
-
+    <footer>
+      <p class="copy">&#169;login form.all reserved.</p>
     </footer>
     <!--footer section end-->
 
@@ -40,4 +59,5 @@
   <!--container end-->
   <script src="assets/js/script.js"></script>
 </body>
+
 </html>
