title added in html structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Client</title>
+  <title>Home Page</title>
   <!-- View-port Basics: http://mzl.la/VYREaP -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
@@ -30,11 +30,11 @@
         </div>
         <nav class="navbar">
           <ul class="nav-list">
-            <li class="nav-item"><a href="" class="nav-link">home</a></li>
-            <li class="nav-item"><a href="" class="nav-link">about us </a></li>
-            <li class="nav-item"><a href="" class="nav-link">feature</a></li>
-            <li class="nav-item"><a href="" class="nav-link">feedback</a></li>
-            <li class="nav-item"><a href="" class="nav-link">contact us</a></li>
+            <li class="nav-item"><a href="" class="nav-link" title="Home">home</a></li>
+            <li class="nav-item"><a href="" class="nav-link" title="About Us">about us </a></li>
+            <li class="nav-item"><a href="" class="nav-link" title="Feature">feature</a></li>
+            <li class="nav-item"><a href="" class="nav-link" title="Feedback">feedback</a></li>
+            <li class="nav-item"><a href="" class="nav-link" title="Contac US">contact us</a></li>
           </ul>
         </nav>
         <button class="btn">logout</button>
