image file added

--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
     <!--main section end-->
     <!--footer section start-->
     <footer>
-      <p class="copy">&#169;login form.all reserved.</p>
+      <p class="copy">&#169; copy right login form.all right reserved.</p>
     </footer>
     <!--footer section end-->
   </div>
