--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--header section start-->
     <header>
       <div class="wrapper">
-        <h1 class="home-heading">welcome to home page</h1>
+        <h1 class="home-heading"><a href="#FIXME" title="Logo">welcome to home page</a></h1>
         <div class="hamburger">
           <span class="bar bar1">bar</span>
           <span class="bar bar2">bar</span>
@@ -30,7 +30,7 @@
         </div>
         <nav class="navbar">
           <ul class="nav-list">
-            <li class="nav-item"><a href="" class="nav-link" title="Home">home</a></li>
+            <li class="nav-item"><a href="" class="nav-link active" title="Home">home</a></li>
             <li class="nav-item"><a href="" class="nav-link" title="About Us">about us </a></li>
             <li class="nav-item"><a href="" class="nav-link" title="Feature">feature</a></li>
             <li class="nav-item"><a href="" class="nav-link" title="Feedback">feedback</a></li>
@@ -43,15 +43,17 @@
     <!--header section start-->
     <!--main section start-->
     <main>
+      <section class="home-page">
       <div class="wrapper">
         <h2 class="sub-heading">home page content here</h2>
       </div>
+    </section>
     </main>
     <!--main section end-->
 
     <!--footer section start-->
     <footer>
-      <p class="copy">&#169;login form.all reserved.</p>
+      <p class="copy">&#169; copy right login form.all right reserved.</p>
     </footer>
     <!--footer section end-->
 
