--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
           <h1 class="heading">login here</h1>
           <form action="#FIXME" method="post" class="my-form" name="form">
             <div class="input-group">
-              <input type="text" name="Email" class="username" placeholder="enter your email...">
+              <input type="text" name="Email" class="username" placeholder="enter username or email...">
               <span class="error">error</span>
             </div>
             <div class="input-group">
